# OM-Content-Engine

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: architecture.md  audit-next-stage.md  business-definitions.md  content-briefs.md  content-candidates.md  content-intelligence-rules.md  data-pull-readiness.md  demo-pipeline.md  editorial-assignments-sync.md  editorial-assignments.md  editorial-operator-runbook.md  editorial-planning.md  fxplug-lighting-stabilizer-spec.md  merge-and-rollout-checklist.md  operating-principles.md  operational-snapshot.md  org-classification-rules.md  owner-checklist.md  phased-roadmap.md  portfolio-airtable-contract.md  portfolio-airtable-example.md  portfolio-airtable-pilot-contract-lock.md  portfolio-airtable-pilot-validation-pack.md  portfolio-batching.md  portfolio-draft-usage.md  portfolio-override-authoring.md  portfolio-phase-one-status.md  portfolio-pilot-mapping-pack.md  portfolio-post-pilot-review-framework.md  portfolio-recommendations.md  portfolio-reviewed-truth.md  portfolio-snapshot.md  portfolio-support-routing-milestones.md  reporting-outputs.md  review-workflow.md  reviewed-truth-priority-audit.md  reviewed-truth.md  schema.md  segmentation-rules.md  source-mapping.md  (+1 more)
src/: __init__.py
tests/: test_content_briefs.py  test_content_candidates.py  test_content_intelligence.py  test_demo_pipeline.py  test_editorial_assignments.py  test_editorial_assignments_airtable_sync.py  test_editorial_plan.py  test_fixture_ingest.py  test_normalization.py  test_portfolio_airtable_contract.py  test_portfolio_batch.py  (+15 more)
(+104 files in other folders)
